Sat Apr  4 03:39:28 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/ComponentServer/CIAO_ComponentServer_Impl.cpp:
        * ciao/ComponentServer/CIAO_Container_Impl.cpp:

          Ficed a couple memory management issues. 
        
Mon Mar 23 12:51:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Logger/File_Logger_Backend.h
        * ciao/Logger/Logger_Service.cpp
        * ciao/Logger/Logger_Service.h
        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp
        * DAnCE/tests/ObjectLocatorTest/srv_main.cpp
        * DAnCE/tests/RedirectionServiceTest/srv_main.cpp
        * tests/CIAO_ComponentServer/Basic/client.cpp
        * tests/CIAO_ComponentServer/SimpleComponent/client.cpp
          Fixed unicode compile problems

Fri Mar 20 19:00:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/DomainApplicationManager/Node_Locator.cpp
        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp
        * DAnCE/tests/NameServiceTest/srv_main.cpp
        * performance-tests/Benchmark/RoundTrip/client.cpp
        * performance-tests/Benchmark/RoundTripClient/RoundTripClient_exec.cpp
        * performance-tests/Protocols/Controller/Controller.cpp
        * performance-tests/Protocols/Receiver/Receiver_exec.cpp
        * performance-tests/Protocols/Sender/Sender_exec.cpp
        * tests/Bug_2130_Regression/SEC_CheckPoint/controller.cpp
        * tests/CIAO_ComponentServer/Basic/client.cpp
        * tools/Config_Handlers/Basic_Deployment_Data.hpp
          Fixed unicode compile problems

Fri Mar 20 15:54:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RedirectionService/CCMObjectLocator.h:
          Added missing export macro to resolve link problems
          with CB2009

        * DAnCE/tests/ObjectLocatorTest/DummyImpl.cpp:
        * DAnCE/tests/ObjectLocatorTest/DummyImpl.h:
          Layout changes

Mon Mar 16 20:11:22 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
